force-app/main/default/objects/Address__c/fields/Custom_Field_Testing__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Testing__c</fullName>
    <label>Custom_Field_Testing</label>
    <precision>18</precision>
    <scale>0</scale>
    
    <type>Number</type>
</CustomField>