force-app/main/default/objects/Address__c/fields/Test_Custom_Field1__c.field-meta.xml
<CustomField>
    <fullName>Test_Custom_Field1__c</fullName>
    <description>test change for field</description>
    <inlineHelpText>Testing custom field</inlineHelpText>
    <label>Test_Custom_Field1</label>
    <length>20</length>
    <type>Text</type>
    
</CustomField>